--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -17,6 +17,7 @@
     <title>Storybooks</title>
   </head>
   <body>
+    {{> _header}}
     <div class="container">
       {{{body}}}
     </div>
@@ -24,5 +25,9 @@
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"
     ></script>
+
+    <script>
+      M.Sidenav.init(document.querySelector('.sidenav'))
+    </script>
   </body>
 </html>
